@@ -16,6 +16,7 @@ Verilator 4.225 devel
 * Fix incorrect bit op tree optimization (#3470). [algrobman]
 * Fix empty string arguments to display (#3484). [Grulfen]
 * Fix table misoptimizing away display (#3488). [Stefan Post]
+* Fix wrong bit op tree optimization (#3509). [Nathan Graybeal]
 
 
 Verilator 4.224 2022-06-19
